--- a/index.html
+++ b/index.html
@@ -9,9 +9,10 @@
             font-family: Arial, sans-serif;
             margin: 20px;
             background-color: #f9f9f9;
+            color: #333;
         }
         h1 {
-            color: #333;
+            color: #4CAF50;
             text-align: center;
         }
         .input-group {
@@ -25,25 +26,26 @@
         input[type="text"],
         select {
             width: 100%;
-            padding: 8px;
+            padding: 10px;
             margin-bottom: 10px;
+            border: 1px solid #ccc;
+            border-radius: 4px;
             box-sizing: border-box;
         }
         button {
             padding: 10px 20px;
             color: white;
             border: none;
+            border-radius: 4px;
             cursor: pointer;
             margin-right: 5px;
             margin-top: 10px;
-            transition: background-color 0.3s;
         }
         .machine-btn {
             width: 150px;
             height: 50px;
             margin-bottom: 10px;
             font-size: 16px;
-            transition: background-color 0.3s;
         }
         .machine-buttons {
             display: flex;
@@ -63,21 +65,20 @@
         .calc-btn:hover {
             background-color: #45a049;
         }
-        .results-container {
+        .result-container {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: space-around;
             margin-top: 20px;
-            display: grid;
-            grid-template-columns: repeat(3, 1fr);
-            gap: 15px;
-            justify-items: center;
         }
-        .result-box {
+        .result {
             background-color: #fff;
             border: 1px solid #ddd;
-            border-radius: 5px;
+            border-radius: 4px;
             padding: 15px;
-            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-            width: 100%;
-            text-align: center;
+            margin: 5px;
+            flex: 1 1 calc(30% - 10px);
+            box-shadow: 0 2px 5px rgba(0,0,0,0.1);
         }
         table {
             margin-top: 20px;
@@ -90,11 +91,19 @@
             text-align: left;
         }
         th {
-            background-color: #f2f2f2;
+            background-color: #4CAF50;
+            color: white;
         }
         h2 {
             margin-top: 30px;
             text-align: center;
+        }
+        #downloadBtn {
+            background-color: #007BFF;
+            margin-top: 20px;
+        }
+        #downloadBtn:hover {
+            background-color: #0056b3;
         }
     </style>
 </head>
@@ -145,13 +154,13 @@
     </form>
 
     <h2>Resultados:</h2>
-    <div class="results-container">
-        <div class="result-box" id="cutsResult">Número de Cortes: </div>
-        <div class="result-box" id="turnsResult">Número de Voltas: </div>
-        <div class="result-box" id="cutAmountResult">Quantidade Cortada: </div>
-        <div class="result-box" id="totalCutAmountResult">Quantidade Total Cortada: </div>
-        <div class="result-box" id="cyclesResult">Número de Ciclos: </div>
-        <div class="result-box" id="remainingTurnsResult">Restante de Voltas para Fechar a OP: </div>
+    <div class="result-container">
+        <div class="result" id="cutsResult">Número de Cortes: </div>
+        <div class="result" id="turnsResult">Número de Voltas: </div>
+        <div class="result" id="cutAmountResult">Quantidade Cortada: </div>
+        <div class="result" id="totalCutAmountResult">Quantidade Total Cortada: </div>
+        <div class="result" id="cyclesResult">Número de Carrossel: </div>
+        <div class="result" id="remainingTurnsResult">Restante de Voltas para Fechar a OP: </div>
     </div>
 
     <table id="recordsTable">
@@ -171,7 +180,7 @@
         <tbody></tbody>
     </table>
 
-    <button onclick="downloadCSV()">Download CSV</button>
+    <button id="downloadBtn" onclick="downloadCSV()">Download CSV</button>
 
     <script>
         let records = [];
@@ -230,52 +239,46 @@
             let numTurns = 0;
 
             if (fabricType === 'Plano') {
-                numTurns = Math.floor(((120 - opWeight) * 0.375) + 40);
+                numTurns = Math.ceil(opQuantity / (numCuts * (opWeight / 1000)));
             } else if (fabricType === 'Tubular') {
-                numTurns = Math.floor(((82 - opWeight) * 0.3) + 40);
+                numTurns = Math.ceil(opQuantity / (numCuts * (opWeight / 1000) * 0.5));
             } else if (fabricType === 'PET') {
-                numTurns = 25;
+                numTurns = Math.ceil(opQuantity / (numCuts * (opWeight / 1000) * 0.75));
             }
+
             document.getElementById('turnsResult').textContent = `Número de Voltas: ${numTurns}`;
 
             // Cálculo da Quantidade Cortada
-            const cutAmount = Math.floor(opQuantity * numCuts);
-            document.getElementById('cutAmountResult').textContent = `Quantidade Cortada: ${cutAmount}`;
+            const cutAmount = numCuts * opLength * (opWeight / 1000);
+            document.getElementById('cutAmountResult').textContent = `Quantidade Cortada: ${cutAmount.toFixed(2)} kg`;
 
             // Cálculo da Quantidade Total Cortada
-            const totalCutAmount = cutAmount + piecesRemoved;
-            document.getElementById('totalCutAmountResult').textContent = `Quantidade Total Cortada: ${totalCutAmount}`;
+            const totalCutAmount = cutAmount + piecesRemoved * opWeight;
+            document.getElementById('totalCutAmountResult').textContent = `Quantidade Total Cortada: ${totalCutAmount.toFixed(2)} kg`;
 
             // Cálculo do Número de Ciclos
-            const numCycles = Math.floor(totalCutAmount / opQuantity);
-            document.getElementById('cyclesResult').textContent = `Número de Ciclos: ${numCycles}`;
+            const cycles = Math.floor(opQuantity / (totalCutAmount || 1));
+            document.getElementById('cyclesResult').textContent = `Número de Ciclos: ${cycles}`;
 
-            // Parte fracionária do número de ciclos
-            const fractionalPart = totalCutAmount % opQuantity / opQuantity;
-            const remainingTurns = Math.floor(numTurns * fractionalPart);
+            // Cálculo do Restante de Voltas para Fechar a OP
+            const remainingTurns = numTurns - cycles;
             document.getElementById('remainingTurnsResult').textContent = `Restante de Voltas para Fechar a OP: ${remainingTurns}`;
 
-            // Atualizando a tabela com o novo registro
-            const newRecord = {
-                dateTime: new Date().toLocaleString(),
-                activeMachines: getActiveMachinesCount(),
-                opNumber: opNumber,
-                componentCode: componentCode,
-                opQuantity: opQuantity,
-                opLength: opLength,
-                fabricType: fabricType,
-                opWeight: opWeight,
-                piecesRemoved: piecesRemoved
-            };
+            // Armazenando registro
+            const activeMachines = Array.from(document.getElementsByClassName('machine-btn'))
+                .filter(button => button.classList.contains('active'))
+                .map(button => button.textContent)
+                .join(', ');
 
-            records.push(newRecord);
+            const dateTime = new Date().toLocaleString();
+            records.push({ dateTime, activeMachines, opNumber, componentCode, opQuantity, opLength, fabricType, opWeight, piecesRemoved });
             updateTable();
+            resetForm();
         }
 
         function updateTable() {
-            const tbody = document.querySelector('#recordsTable tbody');
+            const tbody = document.getElementById('recordsTable').querySelector('tbody');
             tbody.innerHTML = '';
-
             records.forEach(record => {
                 const row = document.createElement('tr');
                 row.innerHTML = `
@@ -293,22 +296,41 @@
             });
         }
 
+        function resetForm() {
+            document.getElementById('productionForm').reset();
+            const machineButtons = document.getElementsByClassName('machine-btn');
+            for (let button of machineButtons) {
+                button.classList.add('inactive');
+                button.classList.remove('active');
+            }
+            document.querySelectorAll('.result').forEach(result => result.textContent = result.id.replace('Result', ': ') + '0');
+        }
+
         function downloadCSV() {
-            let csvContent = "data:text/csv;charset=utf-8,";
-            csvContent += "Data e Hora,Máquinas Ativas,Número da OP,Código do Componente,Quantidade da OP,Comprimento da OP,Tipo de Tecido,Gramatura da OP,Quantidade de Peças Retiradas\n";
+            const csvRows = [];
+            const headers = ['Data e Hora', 'Máquinas Ativas', 'Número da OP', 'Código do Componente', 'Quantidade da OP', 'Comprimento da OP', 'Tipo de Tecido', 'Gramatura da OP', 'Quantidade de Peças Retiradas'];
+            csvRows.push(headers.join(','));
 
             records.forEach(record => {
-                const row = `${record.dateTime},${record.activeMachines},${record.opNumber},${record.componentCode},${record.opQuantity},${record.opLength},${record.fabricType},${record.opWeight},${record.piecesRemoved}`;
-                csvContent += row + "\n";
+                const values = [
+                    record.dateTime,
+                    record.activeMachines,
+                    record.opNumber,
+                    record.componentCode,
+                    record.opQuantity,
+                    record.opLength,
+                    record.fabricType,
+                    record.opWeight,
+                    record.piecesRemoved
+                ];
+                csvRows.push(values.join(','));
             });
 
-            const encodedUri = encodeURI(csvContent);
-            const link = document.createElement('a');
-            link.setAttribute('href', encodedUri);
-            link.setAttribute('download', 'registro_producao.csv');
-            document.body.appendChild(link);
-            link.click();
-            document.body.removeChild(link);
+            const csvFile = new Blob([csvRows.join('\n')], { type: 'text/csv' });
+            const downloadLink = document.createElement('a');
+            downloadLink.href = URL.createObjectURL(csvFile);
+            downloadLink.download = 'records.csv';
+            downloadLink.click();
         }
     </script>
 </body>
