--- a/index.html
+++ b/index.html
@@ -8,31 +8,24 @@
         body {
             font-family: Arial, sans-serif;
             margin: 20px;
-            background-color: #f9f9f9;
-            color: #333;
         }
         h1 {
             color: #333;
-            text-align: center;
-            margin-bottom: 20px;
         }
         .input-group {
-            margin-bottom: 15px;
+            margin-bottom: 10px;
         }
         label {
             display: block;
             margin-bottom: 5px;
-            font-weight: bold;
         }
         input[type="number"],
         input[type="text"],
         select {
             width: 100%;
-            padding: 10px;
+            padding: 8px;
             margin-bottom: 10px;
             box-sizing: border-box;
-            border: 1px solid #ccc;
-            border-radius: 4px;
         }
         button {
             padding: 10px 20px;
@@ -41,18 +34,15 @@
             cursor: pointer;
             margin-right: 5px;
             margin-top: 10px;
-            border-radius: 4px;
-            font-size: 16px;
         }
         .machine-btn {
             width: 150px;
             height: 50px;
+            margin-bottom: 10px;
             font-size: 16px;
-            border-radius: 4px;
         }
         .machine-buttons {
             display: flex;
-            justify-content: center;
             gap: 10px;
             margin-bottom: 20px;
         }
@@ -71,37 +61,22 @@
         .result {
             margin-top: 20px;
             font-weight: bold;
-            padding: 10px;
-            background-color: #e7f3fe;
-            border-left: 6px solid #2196F3;
         }
         table {
             margin-top: 20px;
             width: 100%;
             border-collapse: collapse;
-            box-shadow: 0 2px 5px rgba(0,0,0,0.1);
-            background-color: white;
         }
         table, th, td {
             border: 1px solid #ddd;
-            padding: 12px;
+            padding: 8px;
             text-align: left;
         }
         th {
             background-color: #f2f2f2;
-            font-weight: bold;
         }
         h2 {
             margin-top: 30px;
-            color: #4CAF50;
-        }
-        button#download {
-            background-color: #2196F3;
-            padding: 10px 15px;
-            margin-top: 15px;
-        }
-        button#download:hover {
-            background-color: #1976D2;
         }
     </style>
 </head>
@@ -152,14 +127,12 @@
     </form>
 
     <h2>Resultados:</h2>
-    <div class="result">
-        <p id="cutsResult">Número de Cortes: </p>
-        <p id="turnsResult">Número de Voltas: </p>
-        <p id="cutAmountResult">Quantidade Cortada: </p>
-        <p id="totalCutAmountResult">Quantidade Total Cortada: </p>
-        <p id="cyclesResult">Número de Ciclos: </p>
-        <p id="remainingTurnsResult">Restante de Voltas para Fechar a OP: </p>
-    </div>
+    <p id="cutsResult">Número de Cortes: </p>
+    <p id="turnsResult">Número de Voltas: </p>
+    <p id="cutAmountResult">Quantidade Cortada: </p>
+    <p id="totalCutAmountResult">Quantidade Total Cortada: </p>
+    <p id="cyclesResult">Número de Carrossel: </p>
+    <p id="remainingTurnsResult">Restante de Voltas para Fechar a OP: </p>
 
     <table id="recordsTable">
         <thead>
@@ -178,7 +151,7 @@
         <tbody></tbody>
     </table>
 
-    <button id="download" onclick="downloadCSV()">Download CSV</button>
+    <button onclick="downloadCSV()">Download CSV</button>
 
     <script>
         let records = [];
@@ -237,88 +210,82 @@
             let numTurns = 0;
 
             if (fabricType === 'Plano') {
-                numTurns = Math.floor(((120 - opWeight) * 0.375) + piecesRemoved);
+                numTurns = Math.floor(((120 - opWeight) * 0.73) + 40);
             } else if (fabricType === 'Tubular') {
-                numTurns = Math.floor(((120 - opWeight) * 0.375) + piecesRemoved);
+                numTurns = Math.floor(((82 - opWeight) * 0.3) + 40);
             } else if (fabricType === 'PET') {
-                numTurns = Math.floor(((120 - opWeight) * 0.375) + piecesRemoved);
+                numTurns = 25; // Valor fixo para PET
             }
 
             document.getElementById('turnsResult').textContent = `Número de Voltas: ${numTurns}`;
 
             // Cálculo da Quantidade Cortada
-            const cutAmount = numCuts * opQuantity;
+            const cutAmount = Math.floor(numCuts * numTurns); // Arredondando para menor
             document.getElementById('cutAmountResult').textContent = `Quantidade Cortada: ${cutAmount}`;
 
-            // Cálculo da Quantidade Total Cortada
-            const totalCutAmount = cutAmount + piecesRemoved;
-            document.getElementById('totalCutAmountResult').textContent = `Quantidade Total Cortada: ${totalCutAmount}`;
+            // Cálculo do Número de Ciclos (mantendo a fórmula original)
+            const numCycles = opQuantity / cutAmount; // Fórmula original
+            document.getElementById('cyclesResult').textContent = `Número de Ciclos: ${numCycles}`;
 
-            // Cálculo do Número de Ciclos
-            const cycles = Math.ceil(cutAmount / opQuantity);
-            document.getElementById('cyclesResult').textContent = `Número de Ciclos: ${cycles}`;
-
-            // Cálculo do Restante de Voltas
-            const remainingTurns = Math.max(0, numTurns - piecesRemoved);
+            // Cálculo do Restante de Voltas para Fechar a OP
+            const fractionalPart = numCycles - Math.floor(numCycles); // Parte fracionária do número de ciclos
+            const remainingTurns = Math.floor(numTurns * fractionalPart);
             document.getElementById('remainingTurnsResult').textContent = `Restante de Voltas para Fechar a OP: ${remainingTurns}`;
 
-            // Registro da produção
-            const activeMachines = getActiveMachinesCount();
-            const record = {
-                date: new Date().toLocaleString(),
-                machines: activeMachines,
+            // Atualizando a tabela com o novo registro
+            const newRecord = {
+                dateTime: new Date().toLocaleString(),
+                activeMachines: getActiveMachinesCount(),
                 opNumber: opNumber,
                 componentCode: componentCode,
                 opQuantity: opQuantity,
                 opLength: opLength,
                 fabricType: fabricType,
                 opWeight: opWeight,
-                piecesRemoved: piecesRemoved,
+                piecesRemoved: piecesRemoved
             };
-            records.push(record);
-            updateRecordsTable();
-            document.getElementById('productionForm').reset();
-            resetMachineButtons();
+
+            records.push(newRecord);
+            updateTable();
         }
 
-        function resetMachineButtons() {
-            const machineButtons = document.getElementsByClassName('machine-btn');
-            for (let button of machineButtons) {
-                button.classList.remove('active');
-                button.classList.add('inactive');
-            }
-        }
+        function updateTable() {
+            const tbody = document.querySelector('#recordsTable tbody');
+            tbody.innerHTML = '';
 
-        function updateRecordsTable() {
-            const tableBody = document.getElementById('recordsTable').getElementsByTagName('tbody')[0];
-            tableBody.innerHTML = '';
             records.forEach(record => {
-                const row = tableBody.insertRow();
-                row.insertCell(0).textContent = record.date;
-                row.insertCell(1).textContent = record.machines;
-                row.insertCell(2).textContent = record.opNumber;
-                row.insertCell(3).textContent = record.componentCode;
-                row.insertCell(4).textContent = record.opQuantity;
-                row.insertCell(5).textContent = record.opLength;
-                row.insertCell(6).textContent = record.fabricType;
-                row.insertCell(7).textContent = record.opWeight;
-                row.insertCell(8).textContent = record.piecesRemoved;
+                const row = document.createElement('tr');
+                row.innerHTML = `
+                    <td>${record.dateTime}</td>
+                    <td>${record.activeMachines}</td>
+                    <td>${record.opNumber}</td>
+                    <td>${record.componentCode}</td>
+                    <td>${record.opQuantity}</td>
+                    <td>${record.opLength}</td>
+                    <td>${record.fabricType}</td>
+                    <td>${record.opWeight}</td>
+                    <td>${record.piecesRemoved}</td>
+                `;
+                tbody.appendChild(row);
             });
         }
 
         function downloadCSV() {
-            let csvContent = "data:text/csv;charset=utf-8," 
-                + "Data e Hora,Máquinas Ativas,Número da OP,Código do Componente,Quantidade da OP,Comprimento da OP,Tipo de Tecido,Gramatura da OP,Quantidade de Peças Retiradas\n";
+            let csvContent = "data:text/csv;charset=utf-8,";
+            csvContent += "Data e Hora,Máquinas Ativas,Número da OP,Código do Componente,Quantidade da OP,Comprimento da OP,Tipo de Tecido,Gramatura da OP,Quantidade de Peças Retiradas\n";
+
             records.forEach(record => {
-                csvContent += `${record.date},${record.machines},${record.opNumber},${record.componentCode},${record.opQuantity},${record.opLength},${record.fabricType},${record.opWeight},${record.piecesRemoved}\n`;
+                const row = `${record.dateTime},${record.activeMachines},${record.opNumber},${record.componentCode},${record.opQuantity},${record.opLength},${record.fabricType},${record.opWeight},${record.piecesRemoved}`;
+                csvContent += row + "\n";
             });
 
             const encodedUri = encodeURI(csvContent);
-            const link = document.createElement("a");
-            link.setAttribute("href", encodedUri);
-            link.setAttribute("download", "registro_producao.csv");
+            const link = document.createElement('a');
+            link.setAttribute('href', encodedUri);
+            link.setAttribute('download', 'registro_producao.csv');
             document.body.appendChild(link);
             link.click();
+            document.body.removeChild(link);
         }
     </script>
 </body>
