--- a/index.html
+++ b/index.html
@@ -8,9 +8,12 @@
         body {
             font-family: Arial, sans-serif;
             margin: 20px;
+            background-color: #f9f9f9;
+            color: #333;
         }
         h1 {
-            color: #333;
+            color: #4CAF50;
+            text-align: center;
         }
         .input-group {
             margin-bottom: 10px;
@@ -23,14 +26,17 @@
         input[type="text"],
         select {
             width: 100%;
-            padding: 8px;
+            padding: 10px;
             margin-bottom: 10px;
+            border: 1px solid #ccc;
+            border-radius: 4px;
             box-sizing: border-box;
         }
         button {
             padding: 10px 20px;
             color: white;
             border: none;
+            border-radius: 4px;
             cursor: pointer;
             margin-right: 5px;
             margin-top: 10px;
@@ -43,6 +49,7 @@
         }
         .machine-buttons {
             display: flex;
+            justify-content: center;
             gap: 10px;
             margin-bottom: 20px;
         }
@@ -58,9 +65,20 @@
         .calc-btn:hover {
             background-color: #45a049;
         }
-        .result {
+        .result-container {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: space-around;
             margin-top: 20px;
-            font-weight: bold;
+        }
+        .result {
+            background-color: #fff;
+            border: 1px solid #ddd;
+            border-radius: 4px;
+            padding: 15px;
+            margin: 5px;
+            flex: 1 1 calc(30% - 10px);
+            box-shadow: 0 2px 5px rgba(0,0,0,0.1);
         }
         table {
             margin-top: 20px;
@@ -73,10 +91,19 @@
             text-align: left;
         }
         th {
-            background-color: #f2f2f2;
+            background-color: #4CAF50;
+            color: white;
         }
         h2 {
             margin-top: 30px;
+            text-align: center;
+        }
+        #downloadBtn {
+            background-color: #007BFF;
+            margin-top: 20px;
+        }
+        #downloadBtn:hover {
+            background-color: #0056b3;
         }
     </style>
 </head>
