--- a/index.html
+++ b/index.html
@@ -12,15 +12,17 @@
             color: #333;
         }
         h1 {
-            color: #4CAF50;
+            color: #333;
             text-align: center;
+            margin-bottom: 20px;
         }
         .input-group {
-            margin-bottom: 10px;
+            margin-bottom: 15px;
         }
         label {
             display: block;
             margin-bottom: 5px;
+            font-weight: bold;
         }
         input[type="number"],
         input[type="text"],
@@ -28,24 +30,25 @@
             width: 100%;
             padding: 10px;
             margin-bottom: 10px;
+            box-sizing: border-box;
             border: 1px solid #ccc;
             border-radius: 4px;
-            box-sizing: border-box;
         }
         button {
             padding: 10px 20px;
             color: white;
             border: none;
-            border-radius: 4px;
             cursor: pointer;
             margin-right: 5px;
             margin-top: 10px;
+            border-radius: 4px;
+            font-size: 16px;
         }
         .machine-btn {
             width: 150px;
             height: 50px;
-            margin-bottom: 10px;
             font-size: 16px;
+            border-radius: 4px;
         }
         .machine-buttons {
             display: flex;
@@ -65,45 +68,40 @@
         .calc-btn:hover {
             background-color: #45a049;
         }
-        .result-container {
-            display: flex;
-            flex-wrap: wrap;
-            justify-content: space-around;
-            margin-top: 20px;
-        }
         .result {
-            background-color: #fff;
-            border: 1px solid #ddd;
-            border-radius: 4px;
-            padding: 15px;
-            margin: 5px;
-            flex: 1 1 calc(30% - 10px);
-            box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+            margin-top: 20px;
+            font-weight: bold;
+            padding: 10px;
+            background-color: #e7f3fe;
+            border-left: 6px solid #2196F3;
         }
         table {
             margin-top: 20px;
             width: 100%;
             border-collapse: collapse;
+            box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+            background-color: white;
         }
         table, th, td {
             border: 1px solid #ddd;
-            padding: 8px;
+            padding: 12px;
             text-align: left;
         }
         th {
-            background-color: #4CAF50;
-            color: white;
+            background-color: #f2f2f2;
+            font-weight: bold;
         }
         h2 {
             margin-top: 30px;
-            text-align: center;
+            color: #4CAF50;
         }
-        #downloadBtn {
-            background-color: #007BFF;
-            margin-top: 20px;
+        button#download {
+            background-color: #2196F3;
+            padding: 10px 15px;
+            margin-top: 15px;
         }
-        #downloadBtn:hover {
-            background-color: #0056b3;
+        button#download:hover {
+            background-color: #1976D2;
         }
     </style>
 </head>
